--- a/package.json
+++ b/package.json
@@ -10,11 +10,25 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
+    "uuid-random": "^1.3.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/react": "18.3.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.3.1"
+  },
+  "overrides": {
+    "@types/react": "18.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
